fixed/addressed SonarLint warnings